First tab added

--- a/src/main/resources/assets/xisurthros/lang/en_us.json
+++ b/src/main/resources/assets/xisurthros/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "item.xisurthros.zircon": "Zircon",
-  "item.xisurthros.raw_zircon": "Raw Zircon"
+  "item.xisurthros.raw_zircon": "Raw Zircon",
+
+  "itemGroup.xisurthrostab": "Xisurthros Tab"
 }
