Nintendo Block added

--- a/src/main/resources/assets/xisurthros/lang/en_us.json
+++ b/src/main/resources/assets/xisurthros/lang/en_us.json
@@ -7,6 +7,7 @@
   "block.xisurthros.deepslate_zircon_ore": "Deepslate Zircon Ore",
   "block.xisurthros.endstone_zircon_ore": "Endstone Zircon Ore",
   "block.xisurthros.netherrack_zircon_ore": "Netherack Zircon Ore",
+  "block.xisurthros.nintendo_image_block": "Nintendo Special Block",
 
   "itemGroup.xisurthrostab": "Xisurthros Tab"
 }
